--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    background: url('../media/30cd63fba0dab61d7dc9d86c5ec28177.gif') no-repeat center center/cover;
+    background: url('../media/2.gif') no-repeat center center/cover;
     height: 900px;
     width: 100%;
     z-index: -1;
@@ -80,4 +80,28 @@
     color: black;
     box-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px white;
     font-weight: bold;
+}
+#about{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding: 20px;
+    margin-bottom: 50px;
+}
+#pic{
+    display: flex;
+}
+#pic img{
+    width: 575px;
+    height: 400px;
+}
+#intro{
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    padding: 10px;
+}
+#intro h2{
+    font-size: Zrem;
+    margin-bottom: 20px;
 }
