--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+   scroll-behavior: smooth;
+}
 .navbar{
     display: flex;
     justify-content: center;
@@ -131,6 +134,9 @@
 }
 .row{
     display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    box-sizing: border-box;
 }
 .box{
     display: flex;
@@ -138,4 +144,64 @@
     width: 350px;
     height: 450px;
     border: 1px solid black;
+    margin: 10px;
+    align-items: center;
+    text-align: justify;
+    padding: 10px;
+    border-radius: 15px;
+    background: linear-gradient(to top,rgb(0, 255, 255) 50%,rgb(63, 64, 64) 50%);
+    background-size: 100% 200%;
+    transition: all .9s;
+}
+.box:hover{
+    background-position: left bottom;
+    color: rgb(255, 255, 255) ;
+    border: none;
+    box-shadow: 0 0 20px rgb(0, 255, 255);
+}
+.box img{
+    width: 80px;
+    height: 80px;
+    background-color: white;
+    padding: 10px;
+}
+#contacts{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    background-color: rgba(0,0,0,0.9);
+    color: white;
+    padding: 20px;
+}
+.form{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    align-items: center;
+    margin: 20px 0px;
+}
+.input{
+    padding: 12px;
+    margin: 15px;
+    width: 30%;
+    border: none;
+    outline: none;
+}
+#msg{
+    width: 20%;
+    padding: 10px;
+    margin: 15px;
+    border: none;
+    outline: none;
+}
+#send{
+    padding: 10px;
+    width: 10%;
+    margin: 40px;
+    border: none;
+    outline: none;
+}
+#send:hover{
+    cursor: pointer;
+    box-shadow: 0 0 10px white;
 }
