--- a/css/phone.css
+++ b/css/phone.css
@@ -1,27 +1,114 @@
-#home{
-    height: 820px;
+/* Default styles for larger screens */
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
 }
-.headings{
-    font-size: 1.7rem;
+
+/* Navbar styles */
+.navbar {
+    background-color: #333;
+    overflow: hidden;
 }
-#pic img{
-    width: 300px;
-    height: 175px;
+
+.navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
-#intro h2{
-    font-size: 1.5rem;
+
+.navbar li {
+    float: left;
 }
-.gallery img{
-    width: 250px;
-    height: 150px;
+
+.navbar a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Home section styles */
+#home {
+    background-color: #f2f2f2;
+    padding: 20px;
+    text-align: center;
+}
+
+/* About section styles */
+#about {
+    background-color: #ddd;
+    padding: 20px;
+}
+
+/* Portfolio section styles */
+#portfolio {
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+.gallery img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+/* Services section styles */
+#services {
+    background-color: #ddd;
+    padding: 20px;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.box {
+    flex: 0 0 calc(33.33% - 20px);
     margin: 10px;
 }
-.input{
-    width: 80%;
+
+/* Contacts section styles */
+#contacts {
+    background-color: #f2f2f2;
+    padding: 20px;
 }
-#msg{
-    width: 70%;
+
+.form {
+    max-width: 600px;
+    margin: 0 auto;
 }
-#send{
-    width: 20%;
+
+.input,
+textarea,
+#send {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+/* Media queries for smaller screens */
+@media screen and (max-width: 800px) {
+    /* Adjust styles for screens up to 800px wide */
+    #portfolio, #services {
+        padding: 10px;
+    }
+
+    .box {
+        flex: 0 0 calc(50% - 20px);
+    }
+}
+
+@media screen and (max-width: 530px) {
+    /* Adjust styles for screens up to 530px wide (phones) */
+    #portfolio, #services {
+        padding: 5px;
+    }
+
+    .box {
+        flex: 0 0 100%;
+    }
 }
